chore(footer): fix social, back to top button alignment
This was using `justify-content: right`, which is *not* a
well-supported property. See the `left and right` row in
this table from MDN for compatability notes:

https://developer.mozilla.org/en-US/docs/Web/CSS/justify-content

--- a/src/components/layout/footer.module.scss
+++ b/src/components/layout/footer.module.scss
@@ -85,7 +85,7 @@
     @include margin(0, (top, bottom));
 
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
 
     @media (max-width: $viewport-lg) {
       order: 2;
@@ -127,7 +127,7 @@ hr.divider {
 
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
 
     span {
       @include padding(16, right);
